# squid

./: Cargo.toml  index.html
src/: build_drink.rs  choose_booz.rs  create_drink.rs  create_ingredient.rs  fetch_drink.rs  main.rs  post_drink.rs  text_box.rs
src/components/: booze_selecter.rs  get_booze.rs  mod.rs  models.rs  nav_bar.rs  post_drink.rs  select_box.rs  text_area.rs
