[package]
name = "squid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
yew = "0.19.3"
gloo = "0.8.0"
reqwest = {version = "0.11.11", features = ["json"]}
web-sys = "0.3.59"
wasm-bindgen-futures = "0.4.32"
wasm-bindgen = "0.2.82"
serde_json = "1.0.83"
serde = {version = "1.0.142", features = ["derive"]}
yew-router = "0.16.0"
thiserror = "1.0.32"